--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
+  
   <title>Anirudh Vemula, PE | Project Manager</title>
+  <meta name="description" content="Licensed civil engineer & PM delivering Architecture and Engineering projects across India and USA.">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -32,25 +34,56 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     gtag('config', 'UA-126939217-2');
   </script>
   
-  
+  <!-- Canonical -->
+<link rel="canonical" href="https://anirudhvemula.github.io/">
 
-  <!-- Open Graph-->
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Anirudh Vemula, PE | Project Manager" />
-  <meta property="og:description" content="Project Manager" />
-  <meta property="og:url" content="https://anirudhvemula.github.io/" />
-  <meta property="og:site_name" content="Anirudh Vemula, PE | Project Manager" />
-  <meta property="article:publisher" content="https://anirudhvemula.github.io/" />
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@anirudhvemula" />
-  <meta name="twitter:title" content="Leader | Engineer | Explorer | Systems Thinker | Humane" />
-  <meta name="twitter:description" content="Project Manager" />
-  <meta name="twitter:url" content="https://twitter.com/anirudhvemula" />
-  <meta name="author" content="Anirudh Vemula, PE" />
-  <meta name="description" content="Project Manager with a passion for Technology" />
+<!-- Open Graph (Facebook/LinkedIn/Slack/etc.) -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Anirudh Vemula">
+<meta property="og:title" content="Anirudh Vemula, PE — Project Manager">
+<meta property="og:description" content="Licensed civil engineer & PM delivering Architecture and Engineering projects across India and USA.">
+<meta property="og:url" content="https://anirudhvemula.github.io/">
+<meta property="og:image" content="https://anirudhvemula.github.io/og-image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Portrait and headline: Anirudh Vemula, PE — Project Manager">
+<meta property="og:locale" content="en_US">
+
+<!-- Twitter Cards -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Anirudh Vemula, PE — Project Manager">
+<meta name="twitter:description" content="Licensed civil engineer & PM delivering architecture and construction projects across India and the U.S.">
+<meta name="twitter:image" content="https://anirudhvemula.github.io/og-image.jpg">
+<meta name="twitter:site" content="@anirudhvemula">
+<meta name="twitter:creator" content="@anirudhvemula">
+
+
+<!-- Icons (optional but nice) -->
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/favicon-180x180.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="apple-touch-icon" href="assets/img/favicon/favicon-180x180.png">
+
+<!-- Structured Data (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Anirudh Vemula",
+  "jobTitle": "Project Manager",
+  "hasCredential": "Professional Engineer (California)",
+  "url": "https://anirudhvemula.github.io/",
+  "sameAs": [
+    "https://www.linkedin.com/in/anirudh-vemula/",
+    "https://github.com/anirudhvemula"
+  ]
+}
+</script>
+  
   <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.png">
+  
   <meta name="theme-color" content="#ffffff" />
   <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
