--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/favicon-180x180.png">
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="assets/img/favicon/site.webmanifest">
 <link rel="apple-touch-icon" href="assets/img/favicon/favicon-180x180.png">
 
 <!-- Structured Data (JSON-LD) -->
