--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@ of each drug container to estimate the degradation of the drug.
       </div>
 	  <br><br>
 	  Please use the form below to contact me:
-	  <br>
+	  <br><br><br>
 		<form action="https://formspree.io/f/mnnzkyoa" method="POST" id="contact" novalidate>
 			  <label>
 				Your name
@@ -1061,6 +1061,7 @@ of each drug container to estimate the degradation of the drug.
 
 			  <button type="submit" id="submitBtn">Send</button>
 		</form>
+		<br>
 		<p id="form-status" role="status" aria-live="polite"></p>
 
     </section>
@@ -1131,47 +1132,70 @@ of each drug container to estimate the degradation of the drug.
 </script>
 <script src="https://www.google.com/recaptcha/api.js?render=6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ"></script>
 
+
 <script>
   const form = document.getElementById('contact');
   const statusEl = document.getElementById('form-status');
   const btn = document.getElementById('submitBtn');
 
+  function show(msg) { statusEl.textContent = msg; }
+
   form.addEventListener('submit', function (e) {
     e.preventDefault();
     btn.disabled = true;
-    statusEl.textContent = 'Verifying…';
+    show('Verifying reCAPTCHA…');
 
-    // Ensure the API is ready, then request a token for your chosen action
+    if (typeof grecaptcha === 'undefined') {
+      show('reCAPTCHA failed to load (blocked by CSP/extension/network).');
+      btn.disabled = false;
+      return;
+    }
+
     grecaptcha.ready(function () {
-      grecaptcha.execute('6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ', { action: 'contact_form' }).then(async function (token) {
-        // Add token to the form
-        document.getElementById('g-recaptcha-response').value = token;
+      grecaptcha.execute('6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ', { action: 'contact_form' })
+        .then(async function (token) {
+          // attach token
+          const tokenField = document.getElementById('g-recaptcha-response');
+          if (tokenField) tokenField.value = token;
 
-        statusEl.textContent = 'Sending…';
+          show('Sending…');
 
-        try {
-          const res = await fetch(form.action, {
-            method: 'POST',
-            body: new FormData(form),
-            headers: { 'Accept': 'application/json' }
-          });
+          try {
+            const res = await fetch(form.action, {
+              method: 'POST',
+              body: new FormData(form),
+              headers: { 'Accept': 'application/json' }
+            });
 
-          if (res.ok) {
-            form.reset();
-            statusEl.textContent = 'Thanks! Your message has been sent.';
-          } else {
-            const data = await res.json().catch(() => ({}));
-            statusEl.textContent = (data.errors?.map(e => e.message).join(', ')) || 'Oops—something went wrong.';
+            // If we got here, the network is fine; check HTTP status
+            if (res.ok) {
+              form.reset();
+              show('Thanks! Your message has been sent.');
+            } else {
+              let details = '';
+              try {
+                const data = await res.json();
+                details = data.errors ? data.errors.map(e => e.message).join(', ') : JSON.stringify(data);
+              } catch (_) {}
+              show(`Formspree responded with ${res.status}. ${details || ''}`.trim());
+            }
+          } catch (err) {
+            // This means CORS/CSP/Network truly blocked it
+            console.error('Network/CORS error:', err);
+            show('Network/CORS error. Check CSP, ad blockers, or Allowed Domains.');
+          } finally {
+            btn.disabled = false;
           }
-        } catch (err) {
-          statusEl.textContent = 'Network error. Please try again.';
-        } finally {
+        })
+        .catch((err) => {
+          console.error('reCAPTCHA error:', err);
+          show('reCAPTCHA could not generate a token (key/domain mismatch or blocked).');
           btn.disabled = false;
-        }
-      });
+        });
     });
   });
 </script>
-  
+
+
 </body>
 </html>
