--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,13 @@ of each drug container to estimate the degradation of the drug.
 	  <br><br>
 	  Please use the form below to contact me:
 	  <br><br><br>
+		<form action="https://formspree.io/f/mnnzkyoa" method="POST">
+		  <input name="email" type="email" required />
+		  <textarea name="message" required>Test via plain POST</textarea>
+		  <button type="submit">Send</button>
+		</form>
+
+		<!--
 		<form action="https://formspree.io/f/mnnzkyoa" method="POST" id="contact" novalidate>
 			  <label>
 				Your name
@@ -1061,6 +1068,7 @@ of each drug container to estimate the degradation of the drug.
 
 			  <button type="submit" id="submitBtn">Send</button>
 		</form>
+		-->
 		<br>
 		<p id="form-status" role="status" aria-live="polite"></p>
 
