--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
   
-  <script src="https://www.google.com/recaptcha/api.js"></script>
-    <script>
-        function onSubmit() {
-            document.getElementById("myForm").submit()
-        }
-    </script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ"></script>
   
   <title>Anirudh Vemula, PE | Project Manager</title>
   <meta name="description" content="Licensed civil engineer & PM delivering Architecture and Engineering projects across India and USA.">
