--- a/index.html
+++ b/index.html
@@ -1042,11 +1042,31 @@ of each drug container to estimate the degradation of the drug.
 	  <br><br>
 	  Please use the form below to contact me:
 	  <br>
-		<form action="https://formspree.io/f/mnnzkyoa" method="POST">
-		  <input name="email" type="email" required />
-		  <textarea name="message" required>Test via plain POST</textarea>
-		  <button type="submit">Send</button>
-		</form>
+		<form action="https://formspree.io/f/mnnzkyoa" method="POST" id="contact" novalidate>
+			  <label>
+				Your name
+				<input type="text" name="name" required>
+			  </label>
+
+			  <label>
+				Your email
+				<input type="email" name="email" required>
+			  </label>
+
+			  <label>
+				Message
+				<textarea name="message" rows="6" required></textarea>
+			  </label>
+
+			  <!-- Honeypot -->
+			  <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off">
+
+			  <!-- reCAPTCHA v3 token holder -->
+			  <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response">
+
+			  <button type="submit" id="submitBtn">Send</button>
+			</form>
+
 
 		<!--
 		<form action="https://formspree.io/f/mnnzkyoa" method="POST" id="contact" novalidate>
@@ -1138,7 +1158,7 @@ of each drug container to estimate the degradation of the drug.
     });
   });
 </script>
-<script src="https://www.google.com/recaptcha/api.js?render=6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ"></script>
+
 
 
 <script>
