--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li><a href="#blogs"><i class="fas fa-pen-nib"></i><span>Blogs</span></a></li>
     <li><a href="#awards"><i class="fas fa-trophy"></i><span>Awards</span></a></li>
     <li><a href="#recommendations"><i class="fas fa-thumbs-up"></i><span>Recommendations</span></a></li>
-    <li><a href="#contact"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
+    <li><a href="#contact-section"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
     <li><a href="assets/Anirudh Vemula_2025.pdf" target="_blank"><i class="fas fa-file-pdf"></i><span>Resume</span></a></li>
   </ul>
 </nav>
@@ -161,7 +161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li><a href="#blogs"><i class="fas fa-pen-nib"></i><span>Blogs</span></a></li>
     <li><a href="#awards"><i class="fas fa-trophy"></i><span>Awards</span></a></li>
     <li><a href="#recommendations"><i class="fas fa-thumbs-up"></i><span>Recommendations</span></a></li>
-    <li><a href="#contact"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
+    <li><a href="#contact-section"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
     <li><a href="assets/Anirudh Vemula_2025.pdf" target="_blank"><i class="fas fa-file-pdf"></i><span>Resume</span></a></li>
   </ul>
 </nav>
@@ -201,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="button-container">
   <div class="buttons">
     <a href="#about" class="readme">Read More</a>
-    <a href="#contact" class="contactme">Contact Me</a>
+    <a href="#contact-section" class="contactme">Contact Me</a>
   </div>
   <div class="social">
     <a href="https://linkedin.com/in/anirudh-vemula" target="_blank">
@@ -1017,7 +1017,7 @@ of each drug container to estimate the degradation of the drug.
 </section>
 
     <!-- Eight Section: Contact -->
-    <section id="contact" class="section scrollspy full-height">
+    <section id="contact-section" class="section scrollspy full-height">
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
