--- a/index.html
+++ b/index.html
@@ -8,7 +8,54 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
   <script src="https://www.google.com/recaptcha/api.js?render=6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ"></script>
+	
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-N8TVCQK4');</script>
+	<!-- End Google Tag Manager -->
   
+	<!-- Canonical -->
+	<link rel="canonical" href="https://anirudhvemula.github.io/">
+
+	<!-- Open Graph (Facebook/LinkedIn/Slack/etc.) -->
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Anirudh Vemula">
+	<meta property="og:title" content="Anirudh Vemula, PE — Project Manager">
+	<meta property="og:description" content="Licensed civil engineer & PM delivering Architecture and Engineering projects in India, Dubai and USA.">
+	<meta property="og:url" content="https://anirudhvemula.github.io/">
+	<meta property="og:image" content="https://anirudhvemula.github.io/og-image.jpg">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:height" content="630">
+	<meta property="og:image:alt" content="Portrait and headline: Anirudh Vemula, PE — Project Manager">
+	<meta property="og:locale" content="en_US">
+
+	<!-- Twitter Cards -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Anirudh Vemula, PE — Project Manager">
+	<meta name="twitter:description" content="Licensed civil engineer & PM delivering architecture and construction projects in India, Dubai and the U.S.">
+	<meta name="twitter:image" content="https://anirudhvemula.github.io/og-image.jpg">
+	<meta name="twitter:site" content="@anirudhvemula">
+	<meta name="twitter:creator" content="@anirudhvemula">
+	
+	<!-- Structured Data (JSON-LD) -->
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Person",
+	  "name": "Anirudh Vemula",
+	  "jobTitle": "Project Manager",
+	  "hasCredential": "Professional Engineer (California)",
+	  "url": "https://anirudhvemula.github.io/",
+	  "sameAs": [
+		"https://www.linkedin.com/in/anirudh-vemula/",
+		"https://github.com/anirudhvemula"
+	  ]
+	}
+	</script>
+	
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -81,15 +128,19 @@
   </header>
 
   <main class="main">
-
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-
+	  
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-  <div class="row">
-    <div class="col-12 col-lg-4"><!-- ~1/3 on lg+, full width below -->
+	  
+	  <!-- Revision date -->
+	  <div class="revision-date">
+		Last updated: Sept 2025
+	  </div>
+      
+	  <div class="container" data-aos="fade-up" data-aos-delay="100">
+  	  <div class="row">
+      <div class="col-12 col-lg-4"><!-- ~1/3 on lg+, full width below -->
       <h1 style="color:#fff"><i>&nbsp;&nbsp;&nbsp;<span class="typing" style="font-weight:300;color:#FFFFFF;font-family:'Trebuchet MS',Helvetica,Arial,sans-serif;"></span></i></h1>
       <br><br><br>
       <h3>I'm&nbsp;&nbsp;Anirudh "Ani" Vemula!</h3>
@@ -97,6 +148,7 @@
       <p style="font-size:1.0rem;color:#FFFFFF;margin-top:30px;">
         A self-motivated engineer and project leader who thrives on learning and adapting quickly.  Whether it's coding, designing, or overseeing complex projects, I love taking on new challenges and approach everything with a <i>systems</i> mindset.  I'm naturally curious, at ease working in a variety of fields, and driven by finding innovative, practical and synergistic solutions to real world problems.
       </p>
+	  <br><br><br>
 
       <p style="font-size:0.8rem;color:#ddd;margin-top:60px;">
         Please use side navigation or scroll down to continue reading...
