--- a/index.html
+++ b/index.html
@@ -5,17 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Anirudh Vemula, PE - welcome to my portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="Anirudh Vemula – Professional Engineer & Project Manager. Portfolio of Engineering, Architecture, and creative experiments in code, design, and type (fonts).">
+  <meta name="keywords" content="Anirudh Vemula, civil engineer, project manager, systems, architecture, type design, coding, portfolio">
+  <meta name="author" content="Anirudh Vemula">
   <script src="https://www.google.com/recaptcha/api.js?render=6LcQgK0rAAAAANXIYAA6zvNHpBszHnkLevSMzpYJ"></script>
 	
-	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-N8TVCQK4');</script>
-	<!-- End Google Tag Manager -->
   
 	<!-- Canonical -->
 	<link rel="canonical" href="https://anirudhvemula.github.io/">
@@ -64,6 +58,8 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -79,10 +75,6 @@
 </head>
 
 <body class="index-page">
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N8TVCQK4"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
 	
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
@@ -118,11 +110,12 @@
 				<span>Achievements</span><i class="bi bi-chevron-down toggle-dropdown"></i>
 			</a>
           <ul>
-            <li><a href="#certifications">Certifications</a></li>            
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#awards">Awards</a></li>
-            <li><a href="#blogs">Blogs &amp; Articles</a></li>
-            <li><a href="#memberships">Memberships</a></li>		  
+            <li><a href="#certifications"><i class="fas fa-scroll"></i>&nbsp;&nbsp;&nbsp;Certifications</a></li>            
+            <li><a href="#publications"><i class="fas fa-book"></i>&nbsp;&nbsp;&nbsp;Publications</a></li>
+            <li><a href="#awards"><i class="fas fa-trophy"></i>&nbsp;&nbsp;&nbsp;Awards</a></li>
+            <li><a href="#blogs"><i class="fas fa-pen-nib"></i>&nbsp;&nbsp;&nbsp;Blogs &amp; Articles</a></li>
+            <li><a href="#memberships"><i class="fas fa-users"></i>&nbsp;&nbsp;&nbsp;Memberships</a></li>
+			<li><a href="#testimonials"><i class="fas fa-thumbs-up"></i>&nbsp;&nbsp;&nbsp;Testimonials</a></li>
           </ul>
         </li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
@@ -139,7 +132,7 @@
 	  
 	  <!-- Revision date -->
 	  <div class="revision-date">
-		Last updated: Sept 2025
+		REVISION: SEPT_2025
 	  </div>
       
 	  <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -150,7 +143,7 @@
       <h3>I'm&nbsp;&nbsp;Anirudh "Ani" Vemula!</h3>
 
       <p style="font-size:1.0rem;color:#FFFFFF;margin-top:30px;">
-        A self-motivated engineer and project leader who thrives on learning and adapting quickly.  Whether it's coding, designing, or overseeing complex projects, I love taking on new challenges and approach everything with a <i>systems</i> mindset.  I'm naturally curious, at ease working in a variety of fields, and driven by finding innovative, practical and synergistic solutions to real world problems.
+        A self-motivated engineer and project leader who thrives on learning and adapting quickly.  Whether it's coding, designing, or overseeing complex projects, I love taking on new challenges and approach everything with a <i>systems</i> mindset.  <br><br> I'm naturally curious, at ease working in a variety of fields, and driven by finding innovative, practical and synergistic solutions to real world problems.
       </p>
 	  <br><br><br>
 
@@ -171,23 +164,23 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I bring a unique mix of deep technical knowledge, practical execution, and people-focused leadership, with over 15 years of experience across civil engineering, construction management, and global project operations.</p><br>
+        <p>I have a unique blend of strong technical skills, practical experience, and people-focused leadership. With over 15 years in civil engineering, construction management, and global project operations, I bring valuable insight to every project. </p><br>
 
-		<p>I'm a licensed Professional Engineer (California) with degrees from UIUC and IIT Roorkee, and I've worked across diverse industries, from US infrastructure and consulting to managing a 60+ person Architecture team.</p><br>
+		<p>I am a licensed Professional Engineer in California, and I hold degrees from UIUC and IIT Roorkee. My background spans various industries, including US Infrastructure, Consulting and Architecture, now where I am leading a team of over 60 architects.</p><br>
 
-		<p>My path hasn’t been linear and that’s my strength. I’ve navigated global transitions, career pivots, leadership challenges, and even personal setbacks with a relentless focus on learning, delivery, and integrity. I don’t chase titles— I build relationships, trust, structure, and solutions.</p><br>
+		<p>My career path has not been straightforward, which I see as a strength. I have faced global transitions, changed careers, tackled leadership challenges, and even dealt with personal setbacks. Throughout, I have maintained a focus on learning, delivering results, and acting with integrity. I do not chase titles; instead, I prioritize on building relationships and trust.</p>
+		<br>
 
-		<p>What I bring:
+		<p>What I offer:</p>
 		<ul>
-		  <li>End-to-end project leadership across US &amp; India delivery models</li>
-		  <li>Talent development, operational mentoring, and client coordination</li>
-		  <li>Systems thinking with an eye for scalable, sustainable growth</li>
-		  <li>A calm, grounded presence in high-pressure or ambiguous situations</li>
+		<li>Comprehensive project leadership for both US and India delivery models</li>
+		<li>Talent development, mentoring in operations, and client coordination</li>
+		<li>Systems thinking that emphasizes scalable, sustainable growth</li>
+		<li>A calm, grounded presence during high-pressure or unclear situations</li>
 		</ul>
-		</p>
-		<p>I'm always open to collaborating on meaningful work so please reach out if you're seeking someone who combines technical clarity, operational depth, and steady leadership.</p>
-      </div><!-- End Section Title -->
+		<p>I’m always open to collaborating on meaningful projects. Please reach out if you need someone with technical clarity, operational depth, and consistent leadership.</p><br>
 
+	  </div><!-- End Section Title -->
     </section><!-- /About Section -->
 
     <!-- Stats Section
@@ -765,7 +758,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>A selection of professional and academic recommendations I’ve received from supervisors, colleagues, and professors.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -984,7 +976,7 @@
     </div>
 
     <div class="col-md-6">
-      <label for="email-field" class="pb-2">Your Email</label>
+      <label for="email-field" class="pb-2">Your Email ID</label>
       <input type="email" name="email" id="email-field" class="form-control" required>
     </div>
 
@@ -1138,8 +1130,8 @@
 			"வணக்கம்...",
 			"Marhaba مرحبا..."
 		  ],
-		  typeSpeed: 100,      // typing speed
-		  backSpeed: 50,       // backspacing speed
+		  typeSpeed: 150,      // typing speed
+		  backSpeed: 100,       // backspacing speed
 		  backDelay: 1500,     // pause before deleting
 		  startDelay: 500,     // slight delay on first greeting
 		  loop: true,          // keeps rotating forever
